fixed finding high risk segments

--- a/notebooks/04_paper.ipynb
+++ b/notebooks/04_paper.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "9150cb01",
    "metadata": {},
    "outputs": [],
@@ -1047,7 +1047,7 @@
          "type": "float"
         }
        ],
-       "ref": "77c76f2b-2a7d-4724-a177-f28ee7228bb4",
+       "ref": "2e78fb86-7226-49b9-b30b-567660fbf5b0",
        "rows": [
         [
          "637",
@@ -1848,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "bf5ecd75",
    "metadata": {},
    "outputs": [
@@ -1880,21 +1880,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "id": "a4dafd11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>counter_name</th>\n",
+       "      <th>total_accidents</th>\n",
+       "      <th>sum_strava_total_trip_count</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>street_name</th>\n",
+       "      <th>rr_secure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>streetsegment_0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>21560.0</td>\n",
+       "      <td>LINESTRING (13.35469 52.4875, 13.3557 52.48634...</td>\n",
+       "      <td>52.486743</td>\n",
+       "      <td>13.355350</td>\n",
+       "      <td>streetsegment_0</td>\n",
+       "      <td>2.026467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>streetsegment_1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>LINESTRING (13.36978 52.46062, 13.36998 52.46315)</td>\n",
+       "      <td>52.461885</td>\n",
+       "      <td>13.369878</td>\n",
+       "      <td>streetsegment_1</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>streetsegment_10</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>68495.0</td>\n",
+       "      <td>LINESTRING (13.34208 52.51792, 13.34274 52.517...</td>\n",
+       "      <td>52.545360</td>\n",
+       "      <td>13.192005</td>\n",
+       "      <td>streetsegment_10</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>streetsegment_100</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>65505.0</td>\n",
+       "      <td>LINESTRING (13.18031 52.49027, 13.18031 52.489...</td>\n",
+       "      <td>52.625720</td>\n",
+       "      <td>13.261126</td>\n",
+       "      <td>streetsegment_100</td>\n",
+       "      <td>0.290945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>streetsegment_1000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1890.0</td>\n",
+       "      <td>LINESTRING (13.44518 52.47416, 13.44532 52.47396)</td>\n",
+       "      <td>52.508101</td>\n",
+       "      <td>13.443950</td>\n",
+       "      <td>streetsegment_1000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         counter_name  total_accidents  sum_strava_total_trip_count  \\\n",
+       "0     streetsegment_0              7.0                      21560.0   \n",
+       "1     streetsegment_1              0.0                         80.0   \n",
+       "2    streetsegment_10              6.0                      68495.0   \n",
+       "3   streetsegment_100              0.0                      65505.0   \n",
+       "4  streetsegment_1000              0.0                       1890.0   \n",
+       "\n",
+       "                                            geometry   latitude  longitude  \\\n",
+       "0  LINESTRING (13.35469 52.4875, 13.3557 52.48634...  52.486743  13.355350   \n",
+       "1  LINESTRING (13.36978 52.46062, 13.36998 52.46315)  52.461885  13.369878   \n",
+       "2  LINESTRING (13.34208 52.51792, 13.34274 52.517...  52.545360  13.192005   \n",
+       "3  LINESTRING (13.18031 52.49027, 13.18031 52.489...  52.625720  13.261126   \n",
+       "4  LINESTRING (13.44518 52.47416, 13.44532 52.47396)  52.508101  13.443950   \n",
+       "\n",
+       "          street_name  rr_secure  \n",
+       "0     streetsegment_0   2.026467  \n",
+       "1     streetsegment_1   1.000000  \n",
+       "2    streetsegment_10   1.000000  \n",
+       "3   streetsegment_100   0.290945  \n",
+       "4  streetsegment_1000   1.000000  "
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rr_segments_df = pd.read_parquet(DATA_DIR / \"segments_with_risk.parquet\")\n",
-    "rr_junctions_df = pd.read_parquet(DATA_DIR / \"junctions_with_risk.parquet\")\n",
+    "#rr_segments_df = pd.read_parquet(DATA_DIR / \"segments_with_risk.parquet\")\n",
+    "rr_segments_df = agg_segments\n",
+    "#rr_junctions_df = pd.read_parquet(DATA_DIR / \"junctions_with_risk.parquet\")\n",
+    "rr_junctions_df = agg_junctions\n",
     "# drop all duplicates for each segment/junction based on counter_name/node_id\n",
-    "rr_segments_df = rr_segments_df.drop_duplicates(subset=[\"counter_name\"], keep=\"first\")\n",
-    "rr_junctions_df = rr_junctions_df.drop_duplicates(subset=[\"node_id\"], keep=\"first\")\n"
+    "#rr_segments_df = rr_segments_df.drop_duplicates(subset=[\"counter_name\"], keep=\"first\")\n",
+    "#rr_junctions_df = rr_junctions_df.drop_duplicates(subset=[\"node_id\"], keep=\"first\")\n",
+    "\n",
+    "\n",
+    "rr_segments_df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "id": "d16b4515",
    "metadata": {},
    "outputs": [
@@ -1902,7 +2026,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "risk for junction 2482: 6.402401887438277\n"
+      "risk for junction 2482: 6.402401887438274\n"
      ]
     }
    ],
@@ -1912,7 +2036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "id": "1e31f33d",
    "metadata": {},
    "outputs": [
@@ -1950,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "id": "94b5b9e7",
    "metadata": {},
    "outputs": [
@@ -1959,78 +2083,109 @@
      "output_type": "stream",
      "text": [
       "Top 10 High-Risk Segments IDs:\n",
-      "['streetsegment_1534', 'streetsegment_3026', 'streetsegment_3272', 'streetsegment_3360', 'streetsegment_3665', 'streetsegment_4089', 'streetsegment_4152', 'streetsegment_4333', 'streetsegment_4765', 'streetsegment_4812']\n",
+      "            counter_name  rr_secure\n",
+      "3641  streetsegment_4765  50.790797\n",
+      "2374  streetsegment_3360  29.756308\n",
+      "2279  streetsegment_3272  26.808364\n",
+      "2058  streetsegment_3026  25.771603\n",
+      "3689  streetsegment_4812  25.010523\n",
+      "3092  streetsegment_4152  22.694525\n",
+      "3037  streetsegment_4089  22.693890\n",
+      "3249  streetsegment_4333  21.059826\n",
+      "525   streetsegment_1534  20.895023\n",
+      "2677  streetsegment_3665  18.775843\n",
       "\n",
       "Top 10 High-Accident Segments IDs:\n",
-      "['streetsegment_0', 'streetsegment_124', 'streetsegment_1686', 'streetsegment_1872', 'streetsegment_2029', 'streetsegment_2184', 'streetsegment_2279', 'streetsegment_25', 'streetsegment_2582', 'streetsegment_4545']\n",
+      "            counter_name  total_accidents\n",
+      "1546  streetsegment_2494             57.0\n",
+      "942   streetsegment_1932             44.0\n",
+      "2588  streetsegment_3573             40.0\n",
+      "2483  streetsegment_3464             38.0\n",
+      "1251  streetsegment_2223             37.0\n",
+      "1165  streetsegment_2139             35.0\n",
+      "1265  streetsegment_2236             35.0\n",
+      "1344  streetsegment_2307             30.0\n",
+      "1673  streetsegment_2612             30.0\n",
+      "470   streetsegment_1482             30.0\n",
       "\n",
       "Common IDs: []\n",
       "\n",
       "Top 10 High-Risk Junctions IDs:\n",
-      "[21, 152, 412, 1098, 1106, 1347, 1496, 2250, 2482, 2834]\n",
+      "      node_id  rr_secure\n",
+      "2638     2834   6.429306\n",
+      "2346     2482   6.402402\n",
+      "21         21   6.047030\n",
+      "1447     1496   5.412290\n",
+      "1073     1098   5.089996\n",
+      "1080     1106   4.892124\n",
+      "2132     2250   4.579475\n",
+      "149       152   4.431204\n",
+      "405       412   4.078056\n",
+      "1307     1347   3.961769\n",
       "\n",
       "Top 10 High-Accident Junctions IDs:\n",
-      "[173, 323, 550, 613, 674, 881, 1057, 1276, 1362, 2804]\n",
+      "      node_id  total_accidents\n",
+      "2319     2455               30\n",
+      "2033     2146               27\n",
+      "2432     2577               26\n",
+      "626       639               26\n",
+      "137       140               24\n",
+      "2132     2250               22\n",
+      "2346     2482               22\n",
+      "2133     2251               21\n",
+      "344       351               20\n",
+      "749       764               20\n",
       "\n",
-      "Common IDs: []\n"
+      "Common IDs: [2482, 2250]\n"
      ]
     }
    ],
    "source": [
     "# Top 10 segments (by rr_secure)\n",
-    "top_seg_ids = (\n",
-    "    rr_segments_df.groupby(\"counter_name\")[\"rr_secure\"]\n",
-    "    .max()\n",
-    "    .sort_values(ascending=False)\n",
+    "seg_top_ten_high_risk = (\n",
+    "    rr_segments_df\n",
+    "    .sort_values(by=\"rr_secure\", ascending=False)\n",
     "    .head(10)\n",
-    "    .index)\n",
-    "seg_top_ten_high_risk = rr_segments_df[rr_segments_df[\"counter_name\"].isin(top_seg_ids)].copy()\n",
+    "    .copy()\n",
+    ")\n",
     "\n",
     "# Top 10 segments (by total_Accidents)\n",
-    "top_seg_ids = (\n",
-    "    rr_segments_df.groupby(\"counter_name\")[\"total_accidents\"]\n",
-    "    .max()\n",
-    "    .sort_values(ascending=False)\n",
+    "seg_top_ten_high_accident = (\n",
+    "    rr_segments_df\n",
+    "    .sort_values(\"total_accidents\", ascending=False)\n",
     "    .head(10)\n",
-    "    .index\n",
+    "    .copy()\n",
     ")\n",
-    "seg_top_ten_high_accident = rr_segments_df[rr_segments_df[\"counter_name\"].isin(top_seg_ids)].copy()\n",
-    "\n",
     "# Top 10 junctions (by rr_secure)\n",
-    "top_jn_ids = (\n",
-    "    rr_junctions_df.groupby(\"node_id\")[\"rr_secure\"]\n",
-    "    .max()\n",
-    "    .sort_values(ascending=False)\n",
+    "jun_top_ten_high_risk = (\n",
+    "    rr_junctions_df\n",
+    "    .sort_values(\"rr_secure\", ascending=False)\n",
     "    .head(10)\n",
-    "    .index\n",
+    "    .copy()\n",
     ")\n",
-    "jun_top_ten_high_risk = rr_junctions_df[rr_junctions_df[\"node_id\"].isin(top_jn_ids)].copy()\n",
-    "\n",
     "# Top 10 junctions (by total_Accidents)\n",
-    "top_jn_ids = (\n",
-    "    rr_junctions_df.groupby(\"node_id\")[\"total_accidents\"]\n",
-    "    .max()\n",
-    "    .sort_values(ascending=False)\n",
+    "jun_top_ten_high_accident = (\n",
+    "    rr_junctions_df\n",
+    "    .sort_values(\"total_accidents\", ascending=False)\n",
     "    .head(10)\n",
-    "    .index\n",
+    "    .copy()\n",
     ")\n",
-    "jun_top_ten_high_accident = rr_junctions_df[rr_junctions_df[\"node_id\"].isin(top_jn_ids)].copy()\n",
-    "\n",
     "\n",
     "print(\"Top 10 High-Risk Segments IDs:\")\n",
-    "print(seg_top_ten_high_risk['counter_name'].tolist())\n",
+    "print(seg_top_ten_high_risk[['counter_name', 'rr_secure']])\n",
+    "\n",
     "\n",
     "print(\"\\nTop 10 High-Accident Segments IDs:\")\n",
-    "print(seg_top_ten_high_accident['counter_name'].tolist())\n",
-    "\n",
+    "print(seg_top_ten_high_accident[['counter_name', 'total_accidents']])\n",
     "common_ids = set(seg_top_ten_high_risk['counter_name']) & set(seg_top_ten_high_accident['counter_name'])\n",
     "print(f\"\\nCommon IDs: {list(common_ids)}\")\n",
     "\n",
     "print(\"\\nTop 10 High-Risk Junctions IDs:\")\n",
-    "print(jun_top_ten_high_risk['node_id'].tolist())\n",
+    "print(jun_top_ten_high_risk[['node_id', 'rr_secure']])\n",
     "\n",
     "print(\"\\nTop 10 High-Accident Junctions IDs:\")\n",
-    "print(jun_top_ten_high_accident['node_id'].tolist())\n",
+    "print(jun_top_ten_high_accident[['node_id', 'total_accidents']])\n",
+    "\n",
     "\n",
     "common_ids = set(jun_top_ten_high_risk['node_id']) & set(jun_top_ten_high_accident['node_id'])\n",
     "print(f\"\\nCommon IDs: {list(common_ids)}\")\n",
