--- a/report/report_template.tex
+++ b/report/report_template.tex
@@ -190,7 +190,7 @@ trip data to estimate the relative crash risk across street segments and junctio
   \label{fig:visual_app}
 \end{figure*}
 
-Cycling is far from a safe endeavour. 92,882 bicycle crashes were recorded in 2024, including 441 fatalities - 16\% of all traffic deaths that year ~\citep{Unfallatlas2025}. 
+Cycling is far from a safe endeavour. 92,882 bicycle crashes were recorded in 2024, including 441 fatalities---16\% of all traffic deaths that year ~\citep{Unfallatlas2025}. 
 Yet it is rarely clear which streets are most dangerous and thus should be avoided by cyclists or made safer. 
 Quantifying street-level danger is non-trivial because simple crash counts confound risk with exposure. 
 Streets with high exposure, i.e. high numbers of cyclists, tend to accumulate more crashes even when per-cyclist risk is low~\citep{luecken2018}. Crashes must be normalised by cyclist counts; otherwise, dangerous streets can remain hidden in dense urban networks~\citep{Uijtdewilligen01092024}. 
@@ -355,12 +355,12 @@ Due to high variance in the crash data, the shrinkage parameter was small ($\wid
 regularization and a wide spread of $r_i$ estimates. These were mapped as partly shown in \cref{fig:junction_details}(a).  
 Most elements exhibit low risk: 64.4\% of segments and 69.1\% of junctions lie within the confidence bounds ($r_i = 1$).  
 Values of $r_i<1$ occur for 17.6\% of segments and 25.8\% of junctions, while 17.9\% of segments and 4.9\% of junctions show elevated risk ($r_i>1$).  
-Risk values range from 0.03-50.79 for segments and 0.03-6.43 for junctions.   
+Risk values range from 0.03--50.79 for segments and 0.03--6.43 for junctions.   
 To verify that the method identifies high-risk locations, one such site was examined in detail.  
 At junction 2482 ($r_i = 6.43$), 22 crashes occurred despite moderate traffic.  
-All involved at least one additional vehicle - mostly cars (20) - and mainly resulted from turning or crossing maneuvers.  
+All involved at least one additional vehicle---mostly cars (20)---and mainly resulted from turning or crossing maneuvers.  
 As shown in \cref{fig:junction_details}(c), car lanes intersect the bicycle lane at this junction.
-We evaluated the algorithm using 1,000 random origin–destination pairs, comparing the shortest-path baseline against safest alternatives across a range of allowable detour and junction-risk constraints ~\citep{NateraOrozco2020}.
+We evaluated the algorithm using 1,000 random origin--destination pairs, comparing the shortest-path baseline against safest alternatives across a range of allowable detour and junction-risk constraints ~\citep{NateraOrozco2020}.
 
 \begin{table}[ht]
 \centering
